# MegaManC

./: .gitignore  CMakeLists.txt  README.md
assets/scenes/: MegaMan.tiled-session  NitroMan.tmj  NitroMan.tsj  Tilemap001.tsj  scene001.tmj
assets/shaders/: collider.frag  collider.vert  default.frag  default.vert  line.frag  tilemap.vert  wireframe.frag
include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_vorbis/: stb_vorbis.c
src/: aabb.c  animation.c  audio_api.c  cJSON.c  entity.c  files.c  game.c  graphics_api.c  list.c  main.c  megaman.c  memory.c  mesh.c  object_pool_api.c  ray_cast.c  renderer.c  scene.c  service.c  shader.c  sprite.c  stb_image.c  test_scene.c  texture.c  tilemap.c  trigger.c  window.c
src/audio/: audio_api.h
src/entity/: aabb.h  entity.h  ray_cast.h  renderers.h  scene.h  sizes.h
src/entity/enemies/: enemy.c  enemy.h  spawner.c  spawner.h
src/entity/enemies/metal/: metal.c  metal.h
src/entity/hud/: lifebar.c  lifebar.h
src/entity/megaman/: megaman.c  megaman.h
src/entity/megaman/weapons/: ally_weapon.c  ally_weapon.h  mega_buster.c  mega_buster.h
src/entity/vfx/: small_explosion.c  small_explosion.h  vfx.c  vfx.h
src/event/: trigger.h
src/game/: flags.h  game.h
src/graphics/: animation.h  graphics_api.h  mesh.h  renderer.h  shader.h  sprite.h  texture.h  tilemap.h  window.h
src/memory/: allocator.h  memory.h
src/pool/: object_pool_api.h
src/scenes/: test_scene.h
src/service/: service.h
src/util/: files.h  iterator.h  list.h  types.h
